--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <span>Total</span>
                     <span>R$ --</span>
                 </div>
+                <div class="cart--limpar"> Limpar todas as pizzas </div>
                 <div class="cart--finalizar">Finalizar a compra</div>
             </div>
         </div>
